# diz_scraper

./: .flake8  .gitignore  README.md  pyproject.toml  pytest.ini
datascraping/: __init__.py  debug_tool.py  read_csv.py  scraper.py
debug/: debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_rechtsgrundlagen_20250109_003806.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_rechtsgrundlagen_20250109_004358.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_rechtsgrundlagen_20250109_004424.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_rechtsgrundlagen_20250109_004448.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_rechtsgrundlagen_20250109_004710.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_rechtsgrundlagen_20250109_004734.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_rechtsgrundlagen_20250109_004823.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_seminar-hochschuldidaktik_20250109_003815.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_seminar-hochschuldidaktik_20250109_004404.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_seminar-hochschuldidaktik_20250109_004427.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_seminar-hochschuldidaktik_20250109_004505.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_seminar-hochschuldidaktik_20250109_004701.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_seminar-hochschuldidaktik_20250109_004744.html  debug_response_https:__didaktikzentrum.de_programm_seminare-fuer-neuberufene_seminar-hochschuldidaktik_20250109_004808.html  debug_response_raw_response_20250109_003753.html  debug_response_raw_response_20250109_004338.html  debug_response_raw_response_20250109_004408.html  debug_response_raw_response_20250109_004439.html  debug_response_raw_response_20250109_004649.html  debug_response_raw_response_20250109_004719.html  debug_response_raw_response_20250109_004752.html  debug_response_raw_response_20250109_005509.html  debug_response_raw_response_20250109_005511.html  debug_response_xref_123456:test-seminar_20250109_005509.html  debug_response_xref_162848:vertiefung-achtsamkeit-und-meditation-im-hochschulkontext_20250109_004725.html  debug_response_xref_162849:fdak-datenbanken-data-science_20250109_004758.html  (+22 more)
tests/: conftest.py
(+10 files in other folders)
